--- a/tasks/STEP 2 - Data collection using API.ipynb
+++ b/tasks/STEP 2 - Data collection using API.ipynb
@@ -20,7 +20,7 @@
         "1. [Spaceflight News API](https://spaceflightnewsapi.net/)\n",
         "2. [Wikipedia API](https://www.mediawiki.org/wiki/API:Main_page)\n",
         "3. [GDELT API](https://gdelt.github.io)\n",
-        "4. [News API](https://newsapi.org)\n",
+        "4. [News API](https://www.newsapi.ai)\n",
         "5. [Twitter API](https://developer.twitter.com/en/docs/tweets/search/api-reference/get-search-tweets)\n",
         "6. [List of news media APIs](https://en.wikipedia.org/wiki/List_of_news_media_APIs)\n",
         "7. [A collective list of free APIs](https://github.com/public-apis/public-apis)\n",
