Add additional information about GDELT and NewsAPI

--- a/tasks/STEP 2 - Data collection using API.ipynb
+++ b/tasks/STEP 2 - Data collection using API.ipynb
@@ -1335,6 +1335,21 @@
         "\n",
         "Hint: you can construct a query to extract data in the CSV format directly."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Bonus\n",
+        "\n",
+        "### Other ways to access GDELT\n",
+        "\n",
+        "GDELT Project has a huge amount of data, that's why we used API to access it. However, the APIs are limited (e.g. https://gdelt.github.io/ doesn't have access to the events database), so there are other ways to access GDELT data. One of them is to download the data directly (however, it is around 2.5 TB of data, which is difficult to store and analyse), or The GDELT database is available in [Google BigQuery](https://www.gdeltproject.org/data.html#googlebigquery) service, but queries tend to be quite expensive.\n",
+        "\n",
+        "### [NewsAPI](https://newsapi.ai/)\n",
+        "\n",
+        "NewsAPI is another API for news, and this API does have the events database. NewsAPI provides only API, and you can use the [Event Registry](https://eventregistry.org/) service to get access to the same data, but in a more user friendly way."
+      ]
     }
   ],
   "metadata": {
@@ -1343,17 +1358,17 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.8.10 64-bit",
+      "display_name": "Python 3.9.13 64-bit (windows store)",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.8.10"
+      "version": "3.9.13"
     },
     "vscode": {
       "interpreter": {
-        "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+        "hash": "48878568151f0c960b693301d958ae5d9823bbc5152e34a6ee7c840954854886"
       }
     }
   },
