Add pointers for what to do next

--- a/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
+++ b/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
@@ -523,6 +523,8 @@
       "source": [
         "## Bonus\n",
         "\n",
+        "### Going to the next page with Scrapy\n",
+        "\n",
         "In search results, for example, you may want to follow all result pages. This is how the spider may look which will follow the link to the next page, extracting data from it (taken from the [official Scrapy tutorial](https://doc.scrapy.org/en/latest/intro/tutorial.html)):\n",
         "\n",
         "```\n",
@@ -545,7 +547,59 @@
         "        if next_page is not None:\n",
         "            next_page = response.urljoin(next_page)\n",
         "            yield scrapy.Request(next_page, callback=self.parse)\n",
-        "```"
+        "```\n",
+        "\n",
+        "### `IMPORTXML` function in Google Sheets\n",
+        "\n",
+        "Similar to the `IMPORTHTML` function we looked at in the STEP1, you can use the `IMPORTXML` function in Google Sheets to extract not only tabular data or list, but any information on the web page.\n",
+        "\n",
+        "To do that, you need to utilize the XPATH expression.\n",
+        "\n",
+        "To extract all links from the LSM page with Scrapy, we used the following CSS selector:\n",
+        "\n",
+        "```\n",
+        "response.css('a.thumbnail__caption::attr(\"href\")')\n",
+        "```\n",
+        "\n",
+        "We can translate it to the XPATH expression:\n",
+        "\n",
+        "```\n",
+        "response.xpath('//a[@class=\"thumbnail__caption\"]/@href')\n",
+        "```\n",
+        "\n",
+        "Now, the syntax to use the `IMPORTXML` function is:\n",
+        "\n",
+        "```\n",
+        "=IMPORTXML(url, xpath_query)\n",
+        "```\n",
+        "\n",
+        "So, to extract all links from the LSM page, we can use the following formula in Google Sheets:\n",
+        "\n",
+        "```\n",
+        "=IMPORTXML(\"https://eng.lsm.lv/\", \"//a[@class='thumbnail__caption']/@href\")\n",
+        "```\n",
+        "\n",
+        "### [Zyte](https://zyte.com/)\n",
+        "\n",
+        "There are services, that handle the scraping of the web pages for you. One of them is Zyte.\n",
+        "\n",
+        "Zyte can host your Scrapy projects and run them automatically, but also there is a service, that can automatically extract news from the news websites. It uses AI to find relevant tags and class names on the webpages, and then it can extract the data from the webpages.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## What to do next?\n",
+        "\n",
+        "If you are interested in more advanced topics, there is what you can do:\n",
+        "\n",
+        "1.  Check the [Scrapy documentation](https://doc.scrapy.org/en/latest/intro/tutorial.html)\n",
+        "2.  Learn to avoid scraping traps, and avoid being blocked by the website. Learn how to adjust your request headers (e.g. `User-Agent`) to avoid being blocked.\n",
+        "3.  Learn image processing and text regonition and how to use it in Scrapy. That can help you to exctract data from images, and to avoid some CAPTCHAs. Some of the best image processing libraries are:\n",
+        "    *  [Pillow](https://pillow.readthedocs.io/en/stable/)\n",
+        "    *  [Tesseract](https://tesseract.readthedocs.io/en/latest/)\n"
       ]
     }
   ],
@@ -555,11 +609,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.13 64-bit (windows store)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.9.13"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "48878568151f0c960b693301d958ae5d9823bbc5152e34a6ee7c840954854886"
+      }
     }
   },
   "nbformat": 4,
