Fix code formatting in Markdown sections

--- a/tasks/STEP 2 - Data collection using API.ipynb
+++ b/tasks/STEP 2 - Data collection using API.ipynb
@@ -43,7 +43,7 @@
         "\n",
         "Here’s an example of a JSON-formatted API response:\n",
         "\n",
-        "```\n",
+        "```json\n",
         "{\n",
         "  \"status\": \"OK\",\n",
         "  \"result\": {\n",
@@ -56,7 +56,7 @@
         "\n",
         "Here’s an example of an XML-formatted API response:\n",
         "\n",
-        "```\n",
+        "```xml\n",
         "<?xml version=\"1.0\"?>\n",
         "<response>\n",
         "  <status>OK</status>\n",
@@ -125,7 +125,7 @@
         "```\n",
         "\n",
         "The response is in JSON format and should look similar to this:\n",
-        "```\n",
+        "```json\n",
         "[\n",
         "  {\n",
         "    \"id\": 15891,\n",
@@ -167,7 +167,7 @@
         "```\n",
         "\n",
         "And the response is:\n",
-        "```\n",
+        "```json\n",
         "{\n",
         "  \"id\": 15891,\n",
         "  \"title\": \"Streamlined and ready for Africa’s growth markets: Q&A with Avanti Communications CEO Kyle Whitehill\",\n",
