--- a/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
+++ b/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
@@ -273,7 +273,7 @@
         "\n",
         "Besides CSS, Scrapy selectors also support using XPath expressions. XPath expressions are generally more powerful than CSS selectors, but they are more difficult to construct. The alternative way to select the title, the subtitle and the article body from the LSM website would be:\n",
         "\n",
-        "```\n",
+        "```python\n",
         "# article-title\n",
         "title = response.xpath('//h1[@class=\"article-title\"]/text()').get()\n",
         "print(title)\n",
@@ -527,7 +527,7 @@
         "\n",
         "In search results, for example, you may want to follow all result pages. This is how the spider may look which will follow the link to the next page, extracting data from it (taken from the [official Scrapy tutorial](https://doc.scrapy.org/en/latest/intro/tutorial.html)):\n",
         "\n",
-        "```\n",
+        "```python\n",
         "import scrapy\n",
         "\n",
         "\n",
