--- a/tasks/STEP 2 - Data collection using API.ipynb
+++ b/tasks/STEP 2 - Data collection using API.ipynb
@@ -190,7 +190,7 @@
         "id": "58f6nFI3dm9m"
       },
       "source": [
-        "## Excercise\n",
+        "## Exercise\n",
         "\n",
         "Find out how many articles are there in the Spaceflight News API database."
       ]
