--- a/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
+++ b/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
@@ -302,7 +302,7 @@
         "\n",
         "Fields are defined as class variables. The field names will be used as the column names of the CSV, Excel and JSON output.\n",
         "\n",
-        "To help organize the collected data, lets modify the LsmspiderItem object in our lsmSpider project. Usualy Item objects are stored in the `items.py` file."
+        "To help organize the collected data, lets modify the LsmspiderItem object in our lsmSpider project. Usually Item objects are stored in the `items.py` file."
       ]
     },
     {
@@ -597,7 +597,7 @@
         "\n",
         "1.  Check the [Scrapy documentation](https://doc.scrapy.org/en/latest/intro/tutorial.html)\n",
         "2.  Learn to avoid scraping traps, and avoid being blocked by the website. Learn how to adjust your request headers (e.g. `User-Agent`) to avoid being blocked.\n",
-        "3.  Learn image processing and text regonition and how to use it in Scrapy. That can help you to exctract data from images, and to avoid some CAPTCHAs. Some of the best image processing libraries are:\n",
+        "3.  Learn image processing and text regognition and how to use it in Scrapy. That can help you to extract data from images, and to avoid some CAPTCHAs. Some of the best image processing libraries are:\n",
         "    *  [Pillow](https://pillow.readthedocs.io/en/stable/)\n",
         "    *  [Tesseract](https://tesseract.readthedocs.io/en/latest/)\n"
       ]
