Add more recommendations for the additional materials

--- a/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
+++ b/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
@@ -597,9 +597,11 @@
         "\n",
         "1.  Check the [Scrapy documentation](https://doc.scrapy.org/en/latest/intro/tutorial.html)\n",
         "2.  Learn to avoid scraping traps, and avoid being blocked by the website. Learn how to adjust your request headers (e.g. `User-Agent`) to avoid being blocked.\n",
+        "3.  Handling logins and cookies. Cookies are useful for web developers to keep track of authentication information, but is problematic for scrapers. Python `requests` library can be used to handle cookies.\n",
         "3.  Learn image processing and text regognition and how to use it in Scrapy. That can help you to extract data from images, and to avoid some CAPTCHAs. Some of the best image processing libraries are:\n",
         "    *  [Pillow](https://pillow.readthedocs.io/en/stable/)\n",
-        "    *  [Tesseract](https://tesseract.readthedocs.io/en/latest/)\n"
+        "    *  [Tesseract](https://tesseract.readthedocs.io/en/latest/)\n",
+        "4. Take a look at Selenium. This is a very powerful tooll, that is mainly used for web automation. Hence, it can also be used for scraping. The main advantage of Selenium is that you can perform actions on the webpage: click, type, etc. It can also be helpful with scraping websites with so-called \"infinite scroll\", which can also be achieved with Scrapy, but it will be more complicated."
       ]
     }
   ],
