Add instructions for the task submissions

--- a/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
+++ b/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
@@ -511,6 +511,9 @@
         "\n",
         "The task is to create a spider to collect all links for the articles on the main page, then extract their title, publication date and the lead section of the article (in bold). Create a separate Scrapy project for that task. Don't forget to think about Item structure for the extracted data.\n",
         "\n",
+        "Save results in the CSV format with the name format `name_surname.csv`, e.g. `marija_isupova.csv`.\n",
+        "Upload your file to: https://makonis.lnb.lv/index.php/s/SILEINzIxGrvSjt\n",
+        "\n",
         "Bonus task: extract also tags below the article body.\n",
         "\n"
       ]
