Update excercise description

--- a/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
+++ b/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
@@ -260,7 +260,9 @@
         "3.   Initialize a new spider (Scrapy project) called wikiSpider. There, create a\n",
         "spider article.py \n",
         "4.   Extract the title of this article\n",
-        "5.   Try to add more Wikipedia pages to the `start_requests` urls and check whether your scraper works with other Wikipedia pages."
+        "5.   Try to add more Wikipedia pages to the `start_requests` urls and check whether your scraper works with other Wikipedia pages.\n",
+        "6.   Save your scraper as `name_surname.py`, e.g. `marija_isupova.py`.\n",
+        "Upload your file to: https://makonis.lnb.lv/index.php/s/SILEINzIxGrvSjt"
       ]
     },
     {
