Remove task submission information

--- a/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
+++ b/tasks/STEP 3 - Crawling the Web with Scrapy.ipynb
@@ -260,9 +260,7 @@
         "3.   Initialize a new spider (Scrapy project) called wikiSpider. There, create a\n",
         "spider article.py \n",
         "4.   Extract the title of this article\n",
-        "5.   Try to add more Wikipedia pages to the `start_requests` urls and check whether your scraper works with other Wikipedia pages.\n",
-        "6.   Save your scraper as `name_surname.py`, e.g. `marija_isupova.py`.\n",
-        "Upload your file to: https://makonis.lnb.lv/index.php/s/SILEINzIxGrvSjt"
+        "5.   Try to add more Wikipedia pages to the `start_requests` urls and check whether your scraper works with other Wikipedia pages."
       ]
     },
     {
@@ -512,9 +510,6 @@
         "In this exercise, you will scrape the Estonian news website: https://news.err.ee/\n",
         "\n",
         "The task is to create a spider to collect all links for the articles on the main page, then extract their title, publication date and the lead section of the article (in bold). Create a separate Scrapy project for that task. Don't forget to think about Item structure for the extracted data.\n",
-        "\n",
-        "Save results in the CSV format with the name format `name_surname.csv`, e.g. `marija_isupova.csv`.\n",
-        "Upload your file to: https://makonis.lnb.lv/index.php/s/SILEINzIxGrvSjt\n",
         "\n",
         "Bonus task: extract also tags below the article body.\n",
         "\n"
